# guzzle

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  build.rs
guzzle-derive/: Cargo.toml
guzzle-derive/src/: attr.rs  lib.rs
kv-predicates/: Cargo.toml
kv-predicates-derive/: Cargo.toml
kv-predicates-derive/src/: lib.rs
kv-predicates-test/: Cargo.toml
kv-predicates-test/src/: lib.rs
kv-predicates/src/: lib.rs
src/: lib.rs
tests/failing/: missing-parser.rs  missing-parser.stderr  string-literal.rs  string-literal.stderr  wrong-parser.rs  wrong-parser.stderr
tests/passing/: all-features.rs
yummy-metadata/: Cargo.toml
yummy-metadata-derive/: Cargo.toml
yummy-metadata-derive/src/: lib.rs
yummy-metadata-test/: Cargo.toml
yummy-metadata-test/src/: lib.rs
yummy-metadata/src/: lib.rs
