[package]
name = "guzzle"
version = "0.1.0"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2018"
license = "MIT"
description = "A derivable trait for consuming key value pairs into structs"
readme = "README.md"
categories = ["data-structures"]
keywords = ["derive", "key", "pair", "key-pair", "wordpress"]
repository = "https://github.com/apolitical/guzzle"

[dependencies]
guzzle-derive = { path = "./guzzle-derive", version = "0.1.0" }

[dev-dependencies]
trybuild = "1.0.17"

[build-dependencies]
regex = "1.3.1"

[badges]
gitlab = { repository = "git@gitlab.com:apolitical/learning-day-projects/guzzle.git" }
maintenance = { status = "experimental" }
